@@ -61,13 +61,13 @@ class Dwoo_Plugin_restrictInternal extends Dwoo_Block_Plugin implements Dwoo_ICo
 	 * @param	Array			$params
 	 * @param	String			$prepend		Unknown param
 	 * @param	String			$append			Unknown param
-	 * @param	String			$type			Unknown param
+	 * @param	String			$content		Unknown param
 	 * @return	String
 	 */
 	public static function postProcessing(Dwoo_Compiler $compiler, array $params, $prepend, $append, $content) {
 		$params = $compiler->getCompiledParams($params);
 
-		$pre	= Dwoo_Compiler::PHP_OPEN.'if( Todoyu::person()->isInternal()||Todoyu::person()->isAdmin() ) {'.Dwoo_Compiler::PHP_CLOSE;
+		$pre	= Dwoo_Compiler::PHP_OPEN.'if( Todoyu::person()->isInternal() ) {'.Dwoo_Compiler::PHP_CLOSE;
 		$post	= Dwoo_Compiler::PHP_OPEN."}".Dwoo_Compiler::PHP_CLOSE;
 
 		if (isset($params['hasElse'])) {
