@@ -27,6 +27,7 @@ core 2.2.0 - not released yet
 	* Added: Todoyu.Helper.cloneObject() for deep object copy (alternative to Object.clone())
 	* Added: Javascript form submit helpers (simple file upload)
 	* Added: TodoyuRenderer::renderSelectGrouped(). Extracted from a dwoo plugin
+	* Added: Dwoo plugin {restrictAdmin}retricted content{/restrictAdmin}
 	* Changed: Unified method naming - getDateXXX() getPersonXXX() getPersonXXXID()
 	* Changed: Renamed TodoyuFieldset to TodoyuFormFieldset
 	* Changed: Prevent selection of disabled select option
@@ -40,6 +41,7 @@ core 2.2.0 - not released yet
 	* Changed: Renamed TodoyuRecordManger::deleteRecords() to deleteRecordsByID()
 	* Changed: ListingRenderer behaviour. Changed Parameter sword to params to be more flexible.
 	* Changed: Rich Text Editor (tinyMCE) uses now advanced mode with some additional edit features
+	* Changed: Renamed config/admin.php to config/sysmanager.php because admin extension was removed
 	* Removed: scal calendar/date picker library
 	* Removed: TodoyuString::replaceOnce()
 	* Removed: TodoyuString::strictHtml2text() is now integrated in html2text() method
